# presage

./: .gitignore  Cargo.toml  help.html  search-index.js  settings.html  src-files.js
.sqlx/: query-34f06903022ece02b7e600b65ecfa26b5e09448233ca739f88fa505f38d5ef8f.json  query-a74d14ac7c9744d6f6ea5f0889b653aa9bc0637b947e9ab8f6c6ab1a39311e78.json
libsignal_protocol/: enum.ServiceId.html  fn.create_sender_key_distribution_message.html  fn.extract_decryption_error_message_from_serialized_content.html  fn.group_encrypt.html  fn.sealed_sender_decrypt.html  fn.sealed_sender_decrypt_to_usmc.html  fn.sealed_sender_encrypt.html  fn.sealed_sender_encrypt_from_usmc.html  fn.sealed_sender_multi_recipient_encrypt.html  struct.DecryptionErrorMessage.html  struct.DeviceId.html  struct.IdentityKeyPair.html  struct.InMemSenderKeyStore.html  struct.InMemSignalProtocolStore.html  (+16 more)
presage-store-sqlite/: Cargo.toml
presage-store-sqlite/.sqlx/: query-07b94691a2cbaac06ce1a7e173f4aa6e19e78312153df4da5ab86f769fb84407.json  query-412acc89a86a2d1f67ea5cdcd29d23b23ec71c7a27bf54b792e003d5722bd29c.json  query-4d5007eead1211fd6eec15d5bab0dcf1fec2b513ac132f3f581779a6c3cca8d6.json  query-5869b79c469b837423ab1a05047756a7a3d0776c55f9f3829e7a04d0ea544e65.json  query-e523896ff21554b8cf90cd62ae380a4b5dd0c358693a28e30bd4ea8c1d3c7fe1.json  query-f345720a14ff0183e0edad4d364455bd17c6a75593d7a7facfed7ef07c7f611c.json
presage-store-sqlite/migrations/: 20260101163100_remove_device_id_from_identities.sql  20260624120100_add_server_timestamp.sql
presage-store-sqlite/src/: content.rs  data.rs  lib.rs
(+2076 files in other folders)
