[package]
name = "presage-store-sqlite"
version = "0.8.0-dev"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = ["cdsi"]
cdsi = ["presage/cdsi"]

[dependencies]
presage = { path = "../presage", default-features = false }

async-trait = "0.1.83"
bytes = "1.9.0"
chrono = "0.4.38"
prost = "0.13.4"
serde_json = "1.0.135"
sqlx = { version = "0.8.2", features = ["json", "sqlite", "uuid", "runtime-tokio"] }
thiserror = "2.0.0"
tracing = "0.1.41"
uuid = "1.12.0"

libsqlite3-sys = { version = "0.30.0", features = ["bundled-sqlcipher"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
rand = "0.9"
